app/sass/style.scss
@import 'reset';
@import 'fonts';
@import 'vars';
@import 'global';

/*NAVIGATION*/
.header {
  width: 100%;
  position: fixed;
  background-color: $silver-100;
}

.nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 6rem 0 3rem 0;

  & .logo {
    margin-right: auto;
  }

  &__list {
    display: flex;
    margin-right: 5.4rem;
  }
  &__list-item {
    font-size: 1.8rem;
    margin-right: 4.5rem;

    &:last-child {
      margin-right: 0;
    }
  }
  &__list-link {
    border-radius: 5px;
    transition: color 0.4s, background-color 0.4s, border 0.4s;

    &:focus {
      @extend %orange-box-shadow;
    }
    &:active {
      text-shadow: $text-shadow;
    }
    &:hover,
    &--active {
      color: $orange-900;
    }
  }

  &__btns {
    display: flex;
  }
  &__btns-item {
    margin-right: 1.5rem;

    &:last-child {
      margin-right: 0;
    }
  }

  &__btn {
    position: relative;
    display: block;
    width: 3.9rem;
    height: 3.9rem;
    border-radius: 5px;
    background-color: transparent;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 1.9rem 1.9rem;
    transition: background 0.4s, color 0.4s;

    & svg {
      width: 1.9rem;
      height: 1.9rem;
      stroke: $darkblue-900;
    }
    &:hover svg {
      stroke: $white;
    }

    &--mmenu {
      display: none;
    }

    &:active,
    &:focus {
      background-color: rgba(255, 122, 80, 0.1);
    }

    &:active &-count {
      background-color: $orange-900;
      color: $white;
    }

    &:focus {
      @extend %orange-box-shadow;
    }

    &:hover {
      background-color: $orange-900;
    }

    &:hover &-count {
      background-color: $white;
      color: $orange-900;
    }
  }

  &__btn-count {
    position: absolute;
    right: 0.2rem;
    top: 0.5rem;
    font-size: 1rem;
    display: block;
    width: 1.3rem;
    height: 1.3rem;
    padding-top: 0.2rem;
    background-color: $orange-900;
    color: #fff;
    border-radius: 100%;
    transition: color 0.4s, background-color 0.4s;
  }

  &__toggle-btn {
    display: block;
    position: relative;
    width: 3rem;
    height: 0.2rem;
    background-color: #363853;
    cursor: pointer;
    transition: transform 0.4s;

    &:before,
    &:after {
      content: '';
      width: 3rem;
      height: 0.2rem;
      background-color: $darkblue-900;
      cursor: pointer;
      transition: transform 0.4s;
      position: absolute;
      left: 0;
    }

    &:before {
      top: -1rem;
    }

    &:after {
      bottom: -1rem;
    }
  }
}
/*HERO*/
.hero {
  padding-top: 15.9rem;
  min-height: 66rem;
  @extend %section-padding;

  &__inner {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
  }

  &__content {
    max-width: 49rem;
  }

  &__title,
  &__text {
    margin-bottom: 2rem;
  }

  &__title {
    @extend %Rubik-500;
    font-size: 6.6rem;
    text-transform: uppercase;
    line-height: 1.3;
    color: $darkblue-900;
  }

  &__text {
    line-height: 1.5;
  }

  &__image {
    min-height: 66rem;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 56rem 66rem;
  }
  &__span {
    display: block;
    color: $orange-900;
  }
}

/*card-product*/

.card-product {
  width: 21rem;
  height: 30rem;
  display: flex;
  padding: 2rem 1.5rem;
  border-radius: 5px;
  flex-direction: column;
  font-size: 1.5rem;
  align-items: center;
  box-shadow: 0 0 0 1px $silver-200;
  background-color: $white;
  transition: box-shadow 0.4s;

  &:hover {
    @extend %orange-box-shadow;
  }

  &__title,
  &__price {
    padding-bottom: 1rem;
  }

  &__image {
    max-width: 14rem;
    max-height: 14rem;
  }

  &__title {
    font-weight: 400;
    font-size: 1.5rem;
    line-height: 1.2;
    margin: auto 0;
  }

  &__price {
    font-weight: 500;
    line-height: 1.4;
  }
  &__btn {
    padding: 0.7rem 1.6rem;
    font-size: 1.4rem;
    display: inline-flex;
    border-radius: 6px;
    line-height: 1.3;
    letter-spacing: 0.54px;
    transition: color 0.4s, background-color 0.4s, border 0.4s;
    background-color: $orange-900;
    color: $white;

    &:focus,
    &:hover {
      @extend %orange-box-shadow;
      color: $orange-900;
    }
    &:focus,
    &:active {
      background-color: rgba(255, 122, 80, 0.1);
    }
    &:active {
      color: $orange-900;
    }
    &:hover {
      background-color: $white;
    }
  }
}
/*shop*/
.shop {
  width: 37rem;
  min-height: 41rem;
  border-radius: 10px;
  background: $white;
  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);

  &:hover {
    box-shadow: 0 3px 15px 0 rgba(255, 104, 56, 0.5);
  }
  &__face {
    max-width: 37rem;
    max-height: 30rem;
    margin-bottom: 1.7rem;
  }
  &__name {
    font-weight: 400;
    margin-left: 2rem;
    font-size: 2.4rem;
  }
  &__inner {
    width: 100%;
    padding: 2rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  &__link {
    border-radius: 20px;
    padding: 1rem 3.3rem;
    transition: color 0.4s, box-shadow 0.4s, background-color 0.4s;

    & svg {
      width: 1.4rem;
      height: 1.2rem;
    }
    &:active,
    &:focus {
      background-color: rgba(255, 122, 80, 0.1);
    }

    &:focus,
    &:hover {
      @extend %orange-box-shadow;
      background-color: #fff2ed;
    }

    &:hover {
      color: $orange-900;
    }
    &:active {
      box-shadow: none;
    }

    & svg {
      fill: $white;
      transition: transform 0.4s, color 0.4s;
    }
    &:hover svg {
      transform: translateX(50%);
      fill: $orange-900;
    }
  }

  &__time {
    display: flex;
    align-items: center;
  }
  &__time:before {
    content: '';
    width: 2.4rem;
    height: 2.5rem;
    background-image: url('../images/sprite.svg#icon-open_time');
    background-repeat: no-repeat;
    background-position: center center;
  }
}
/* ... */

